1km圏内判定に変更と地図表示機能を追加
- エリア判定範囲を10kmから1kmに変更
- Leafletを使用したインタラクティブ地図を追加
- 現在地マーカーと1km圏内を示す円を表示
- 各駅のマーカーを表示（1km圏内は緑色）
- 地図上で距離と圏内状況を確認可能

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "homepage": "",
   "scripts": {
-    "start": "browser-sync start --server --files '*.html, *.css, *.js, images/*' --no-notify --port 3000"
+    "start": "browser-sync start --server --files '*.html, *.css, *.js, images/*' --no-notify"
   },
   "devDependencies": {
     "browser-sync": "^3.0.2"
